--- a/Graph Representation Learning Notes.tex
+++ b/Graph Representation Learning Notes.tex
@@ -188,6 +188,8 @@
 	\end{itemize}
 \end{enumerate}
 
+\subsection{Graph Neural Networks}
+
 \newpage
 
 \subsection*{Appendix: Mathematical Notations}
